option java_multiple_files = true;
option java_generate_equals_and_hash = true;
option java_package = "com.xtrader.protocol.proto.commons.model";
option java_outer_classname = "ContainerCommonModelMessages";


// --- INTENSIVE COMMANDS 1 - 49
// --- COMMON API 50 - 69
enum ProtoPayloadType {
    // common intensive
    PROTO_MESSAGE = 5;
    // common commands
    ERROR_RES = 50;
    HEARTBEAT_EVENT = 51;
}

// COMMON error codes 1 - 99
enum ProtoErrorCode {
    UNKNOWN_ERROR = 1;
    UNSUPPORTED_MESSAGE = 2;
    INVALID_REQUEST = 3;
    WRONG_PASSWORD = 4;
    TIMEOUT_ERROR = 5;
    ENTITY_NOT_FOUND = 6;
    CANT_ROUTE_REQUEST = 7;
    FRAME_TOO_LONG = 8;
    MARKET_CLOSED = 9;
    CONCURRENT_MODIFICATION = 10;
    BLOCKED_PAYLOAD_TYPE = 11;
}

